--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@astrojs/react": "^1.1.4",
     "@astrojs/rss": "^1.0.1",
     "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/tailwind": "^2.0.1",
     "@types/react": "^18.0.21",
     "astro": "^1.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.38.0",
