--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@typescript-eslint/parser": "^5.38.0",
     "eslint": "^8.24.0",
-    "eslint-plugin-astro": "^0.19.0"
+    "eslint-plugin-astro": "^0.19.0",
+    "rehype-add-classes": "^1.0.0"
   }
 }
